test/spec_vectors/memory/fail/module_14.wat
(module (func (f32.store (i32.const 0) (f32.const 0))))